Fix Flickering Mobile, Homepage Title, Sticky CodeSnippet Tags

--- a/src/client/CodeSnippet.scss
+++ b/src/client/CodeSnippet.scss
@@ -30,6 +30,11 @@
 
   transition: all .4s ease;
   box-shadow: 0 1px 3px rgba(170, 170, 170, 0.1);
+
+  // Fixes for Safari mobile - overflow-scrolling makes swiping through the source code
+  // smooth.  Transition fixes a screen flicker bug when scrolling
+  -webkit-overflow-scrolling: touch;
+  -webkit-transition: revert;
 }
 
 .hljs:hover {
@@ -41,8 +46,13 @@
   display: block;
   font-size: 14px;
   color: #aaa;
-  position: absolute;
-  right: 3%;
+
+  // Make the language identifier stick to the right side of the code snippet
+  position: -webkit-sticky;
+  position: sticky;
+
+  left: 90%;
+  float: right;
 }
 
 .hljs-comment,
